--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: node_js
 node_js:
-  - 4
+  - 6
 cache:
   directories:
     - node_modules
 script:
   - npm test
+  - npm build
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: build
+  on:
+    branch: gh-pages
