--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,5 @@ cache:
 script:
   - npm test
   - npm build
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  local_dir: build
-  on:
-    branch: gh-pages
+after_success:
+  - ./deploy.sh
